# MemEval

./: .env.example  .gitignore  README.md  pyproject.toml
prompt/: answer_prompt.txt  memorize_prompt.txt
results/: grades.txt
src/locomo_mvp/: __init__.py  __main__.py  cli.py  config.py  dataset.py  evaluate_results.py  ollama_client.py  prompts.py  results.py  runner.py
tests/: test_cli.py  test_dataset.py  test_evaluate_results.py  test_prompts.py  test_results.py  test_runner.py
